AD adding citations and it compiles
